--- a/_data/sidebars/english_sidebar.yml
+++ b/_data/sidebars/english_sidebar.yml
@@ -32,6 +32,10 @@ entries:
       url: /firmware_upload.html#overview
       output: web
 
+    - title: Firmware Configuration
+      url: /cli.html#overview
+      output: web
+
     - title: App Usage
       url: /app_usage.html#overview
       output: web
@@ -89,6 +93,10 @@ entries:
     - title: Overview
       url: /firmware_upload.html#overview
       output: web, pdf
+
+    - title: Firmware Configuration
+      url: /cli.html#overview
+      output: web
 
     - title: Upload via CanAirIO Web Installer
       url: /firmware_upload.html#canairio-web-installer
