Initial Documentation for Supporting Plantower PMS7003/G7

--- a/_data/sidebars/english_sidebar.yml
+++ b/_data/sidebars/english_sidebar.yml
@@ -60,6 +60,10 @@ entries:
     - title: CanAirIO IKEA Vindriktning 
       url: /canairio_ikea.html
       output: web, pdf 
+    
+    - title: CanAirIO Plantower
+      url: /canairio_plantower.html
+      output: web, pdf 
 
     - title: Solar Station
       url: /solar_station.html
