--- a/_data/sidebars/english_sidebar.yml
+++ b/_data/sidebars/english_sidebar.yml
@@ -32,12 +32,16 @@ entries:
       url: /firmware_upload.html#overview
       output: web
 
-    - title: Firmware Configuration
-      url: /cli.html#overview
+    - title: Firmware config
+      url: /firmware_config.html#overview
       output: web
 
-    - title: App Usage
+    - title: CanAirIO App
       url: /app_usage.html#overview
+      output: web
+
+    - title: CanAirIO CLI
+      url: /cli.html#overview
       output: web
  
   - title: Device
@@ -98,10 +102,6 @@ entries:
       url: /firmware_upload.html#overview
       output: web, pdf
 
-    - title: Firmware Configuration
-      url: /cli.html#overview
-      output: web
-
     - title: Upload via CanAirIO Web Installer
       url: /firmware_upload.html#canairio-web-installer
       output: web, pdf
@@ -121,6 +121,10 @@ entries:
     - title: Upload from Source Code
       url: /firmware_upload.html#via-source-code
       output: web, pdf
+    
+    - title: Firmware configuration
+      url: /firmware_config.html
+      output: web
 
     - title: Firmware debugging
       url: /firmware_debugging.html
@@ -131,20 +135,20 @@ entries:
 
     folderitems:
 
-    - title: Home Assistant
-      url: /home_assistant.html
+    - title: CanAirIO World map
+      url: /cloud_worldmap.html
       output: web, pdf
 
     - title: CanAirIO Mobile Map
       url: /mobile_map.html
       output: web, pdf
 
-    - title: CanAirIO World map
-      url: /cloud_worldmap.html
-      output: web, pdf
-
     - title: Anaire Cloud
       url: /cloud_anaire.html
+      output: web, pdf
+
+    - title: Home Assistant
+      url: /home_assistant.html
       output: web, pdf
   
   - title: API
