--- a/_data/sidebars/english_sidebar.yml
+++ b/_data/sidebars/english_sidebar.yml
@@ -174,6 +174,10 @@ entries:
 
     folderitems:
 
+    - title: Collectives and Partners
+      url: /partners.html
+      output: web, pdf
+
     - title: Respiraton 2021
       url: /Respiraton2021.html
       output: web, pdf
