--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ repository: hpsaturn/canairio-docs
 output: web
 # this property is useful for conditional filtering of content that is separate from the PDF.
 
-topnav_title: CanAirIO Documentation
+topnav_title: CanAirIO
 # this appears on the top navigation bar next to the home button
 
 site_title: CanAirIO documentation portal
