updated sensorlib section and added some external links

--- a/_data/sidebars/english_sidebar.yml
+++ b/_data/sidebars/english_sidebar.yml
@@ -174,11 +174,17 @@ entries:
 
     folderitems:
 
+    - title: Respiraton 2021
+      url: /Respiraton2021.html
+      output: web, pdf
+
     - title: Collectives and Partners
       url: /partners.html
       output: web, pdf
 
-    - title: Respiraton 2021
-      url: /Respiraton2021.html
-      output: web, pdf
+
+
+    # - title: Social Media
+    #   url: /social.html
+    #   output: web, pdf
 
