added new guide for I2C changer on DFRobot sensors by @roberbike

--- a/_data/sidebars/english_sidebar.yml
+++ b/_data/sidebars/english_sidebar.yml
@@ -94,6 +94,10 @@ entries:
       url: /co2_comparative.html
       output: web, pdf
 
+    - title: DF Robot Gravity Sensors
+      url: /dfrobot_sensors.html
+      output: web, pdf
+
   - title: Firmware
     output: web, pdf
 
